--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "forkitech",
+  "homepage": "https://lavrcheck.github.io/Forkitech",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "start": "vite",
+    "predeploy": "npm run build",
     "build": "vite build",
-    "deploy": "vite-plugin-gh-pages",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -26,6 +28,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "vite": "^5.4.10",
     "vite-plugin-gh-pages": "^1.0.0"
